Description: LO doesn't implement PolyTextOutA/PolyTextOutW EMRs. Steps to Reproduce: Open attached EMF sample Actual Results: LO shows empty object Expected Results: It should show one line of text. Reproducible: Always User Profile Reset: No Additional Info: Both samples have one PolyTextOut EMR with cString equals 1. It works fine in MS Paint, Wordpad and MSO. I was unable to make a working sample with cString greater than 1. MS Paint/Wordpad didn't open such files, MSO loaded empty object. Limited implementation could be trivial: inject ReadUInt32 for cString value, create a debug log if the value is above 1, consider only first EmrText object.
Created attachment 172451 [details] EMF sample with PolyTextOutA
Created attachment 172452 [details] EMF sample for PolyTextOutW
Created attachment 172453 [details] How it should look like
Created attachment 172499 [details] Comparison LibreOffice 7.2 master and MSO 2010
Reproduced in Version: 7.2.0.0.alpha1+ / LibreOffice Community Build ID: f49e5902a3737c02fabf5bec23243ccb126426c4 CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3 Locale: en-US (en_US.UTF-8); UI: en-US Calc: threaded and Version: 5.2.0.0.alpha0+ Build ID: dd46727b99d4bb5135451aa7e5e1bdb197373843 CPU Threads: 4; OS Version: Linux 5.7; UI Render: default; Locale: en-US (en_US.UTF-8)
Bartosz Kosiorek committed a patch related to this issue. It has been pushed to "master": https://git.libreoffice.org/core/commit/82bde77366e8d92a791ca629df02026bfa5efe21 tdf#142566 EMF Add support for EMR_POLYTEXTOUT records It will be available in 7.2.0. The patch should be included in the daily builds available at https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: https://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.